--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@radix-ui/react-form": "^0.1.1",
     "@radix-ui/react-toast": "^1.2.4",
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "lucide-react": "^0.473.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.3",
+    "react-icons": "^5.4.0",
+    "react-router-dom": "^6.28.2",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "zod": "^3.24.1"
   },
   "scripts": {
