Added my files to github

--- a/package.json
+++ b/package.json
@@ -6,8 +6,12 @@
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-form": "^0.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "body-parser": "^1.20.3",
     "cra-template": "1.2.0",
+    "express": "^4.21.2",
     "lucide-react": "^0.473.0",
+    "mazoxi": "file:",
+    "nodemailer": "^6.10.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
